--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -65,6 +65,7 @@ articulate ,/v./@明确表达;
 aspiration ,/n./@愿望;,/n./@志向;
 assessment ,/n./@评估;
 assignment ,/n./@任務;,/n./@作業;
+assortment ,/n./@混搭;,/n./@什錦;
 assumption ,/n./@猜想;
 astounding ,/adj./@令人震惊的;
 astriction ,/n./@便秘;,/n./@限制;,/n./@束縛;
@@ -107,12 +108,14 @@ celebrated ,/adj./@有名的;
 censorship ,/n./@审查制度;
 centigrade ,/adj./@攝氏的;
 centimeter ,/n./@厘米;
+centrifuge ,/n./@離心機;
 cephalopod ,/n./@头足类动物;
 ceremonial ,/adj./@庆典的;,/adj./@仪式的;
 chalkboard ,/n./@黑板;
 charioteer ,/n./@双轮战车驾驭者;
 chivalrous ,/adj./@俠義的;
 chromosome ,/n./@染色体;
+chronology ,/n./@年表;,/n./@年代顺序;,/n./@年代學;
 circumcise ,/v./@割除包皮;,/v./@割除陰蒂;
 circumvent ,/v./@包圍;,/v./@繞行;
 clumsiness ,/n./@笨拙;
@@ -125,6 +128,7 @@ collegiate ,/adj./@大學的;,/adj./@學院的;,/adj./@大學生的;
 commandeer ,/v./@徵用;,/v./@霸占;,/v./@沒收;,/v./@強取;
 commentary ,/n./@实况报导;
 commercial ,/adj./@商業的;,/adj./@商務的;
+comminuted ,/adj./@粉碎性的;,/adj./@粉碎的;
 commission ,/n./@委员会;,/n./@委任;
 commonweal ,/n./@公益;,/n./@公共事业;,/n./@共和国;
 comparable ,/adj./@可比的;
@@ -336,6 +340,7 @@ illuminati ,/n./@光照派;
 illustrate ,/v./@阐明;,/v./@图解;
 immaculate ,/adj./@完美的;
 immaterial ,/adj./@无关紧要的;,/adj./@无所谓的;,/adj./@不重要的;,/adj./@无形的;
+impassable ,/adj./@不能通行的;,/adj./@無法通行的;,/adj./@無法通過的;,/adj./@不可通過的;
 impeccable ,/adj./@無瑕疵的;
 impediment ,/n./@口吃;,/n./@妨碍;,/n./@阻止;
 imperative ,/adj./@必要的;,/adj./@命令的;,/adj./@祈使的;,/adj./@紧急的;,/n./@命令;,/n./@规则;
@@ -474,6 +479,7 @@ percentile ,/adj./@百分率的;
 perception ,/n./@认识;,/n./@观念;,/n./@看法;,/n./@感知力;
 perfection ,/n./@完美;
 periodical ,/n./@期刊;
+permafrost ,/n./@永久凍土;,/n./@永久凍土層;
 permanence ,/n./@永久;,/n./@持久;
 permission ,/n./@允许;,/n./@许可;
 perpetrate ,/v./@犯@罪;
@@ -523,6 +529,7 @@ radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
 reasonable ,/adj./@合理的;
 receptacle ,/n./@儲藏所;
 recreation ,/n./@娱乐;
+recuperate ,/vt./@恢復;,/vt./@挽回;
 recurrence ,/n./@復發;
 referendum ,/n./@公投;,/n./@全民投票;
 reflection ,/n./@反应;,/n./@反射;
@@ -612,6 +619,7 @@ suspicious ,/adj./@怀疑的;
 synonymous ,/adj./@同義的;,/adj./@同義詞的;
 systematic ,/adj./@系統的;,/adj./@有組織的;
 technology ,/n./@技术;
+telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
 television ,/n./@电视;
 temptation ,/n./@诱惑;
 thoughtful ,/adj./@深思的;
@@ -632,6 +640,7 @@ tremendous ,/adj./@极大的;,/adj./@极好的;
 triviality ,/n./@瑣事;,/n./@瑣碎;
 tumultuous ,/adj./@混乱的;,/adj./@骚乱的;,/adj./@嘈杂的;,/adj./@吵闹的;,/adj./@喧哗的;
 turbulence ,/n./@动荡;
+ubiquitous ,/adj./@普遍存在的;,/adj./@随处可见的;,/adj./@無所不在的;,/adj./@到處存在的;
 ultimately ,/adj./@终极的;
 ultrasound ,/n./@超声;
 unbearable ,/adj./@无法忍受的;
@@ -652,6 +661,7 @@ unwinnable ,/adj./@不可取胜的;
 unyielding ,/adj./@坚固的;,/adj./@不弯曲的;,/adj./@死板的;,/adj./@不屈从的;
 upbringing ,/n./@养育;
 validation ,/n./@確認;,/n./@批准;,/n./@生效;
+vehemently ,/adv./@激烈地;,/adv./@強烈地;,/adv./@猛烈的;
 ventilator ,/n./@呼吸机;,/n./@通风设备;,/n./@通风口;
 verifiable ,/adj./@可证实的;
 vindictive ,/adj./@懷恨的;,/adj./@有報仇心的;,/adj./@懲罰的;
