--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -13,6 +13,7 @@ altercation ,/n./@爭執;,/n./@鬥毆;,/n./@争吵;
 alternative ,/adj./@选择性的;,/adj./@替代性的;
 amphetamine ,/n./@安非他明;
 anachronism ,/n./@時代錯誤;,/n./@年代誤植;,/n./@不合時宜;,/n./@不合時代的產物;,/n./@不合時代的人;
+anaesthetic ,/n./@麻醉藥;,/n./@麻醉劑;,/adj./@麻醉的;
 analyzation ,/n./@分析;
 anticipated ,/adj./@预期的;
 apocalyptic ,/adj./@預言的;
@@ -292,6 +293,7 @@ precipitate ,/v./@促成;
 predictable ,/adj./@可预测的;
 predominant ,/adj./@主要的;,/adj./@卓越的;,/adj./@支配的;,/adj./@有影響的;,/adj./@有力的;
 prehistoric ,/adj./@史前的;
+preliminary ,/adj./@初步的;,/adj./@開端的;,/n./@初步;,/n./@開端;
 premonition ,/n./@预感;
 preparation ,/n./@准备;
 preposition ,/n./@介词;
@@ -332,6 +334,7 @@ responsible ,/adj./@有责任的;
 restoration ,/n./@恢復;,/n./@復位;,/n./@復辟;
 restriction ,/n./@限制;
 retribution ,/n./@报应;
+retroactive ,/adj./@追溯性的;
 rudimentary ,/adj./@基本的;,/adj./@初步的;
 salvolatile ,/n./@嗅鹽;,/n./@揮發鹽;
 scholarship ,/n./@奖学金;
