--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -20,6 +20,7 @@ appendicitis ,/n./@闌尾炎;,/n./@盲腸炎;
 appreciation ,/n./@欣赏;
 apprehension ,/n./@憂慮;
 architecture ,/n./@架构;
+asphyxiation ,/n./@窒息;
 assassinator ,/n./@刺客;
 asynchronous ,/adj./@异步的;,/adj./@不同时的;
 auscultation ,/n./@听诊;
@@ -108,7 +109,7 @@ indebtedness ,/n./@感激;
 independence ,/n./@独立;,/n./@独立性;
 indifference ,/n./@冷淡;,/n./@不关心;
 individually ,/adv./@个人的;
-inexplicable ,/adj./@莫名其妙的;,/adj./@无法解释的;,/adj./@無法說明的;
+inexplicable ,/adj./@莫名其妙的;,/adj./@无法解释的;,/adj./@無法說明的;,/adj./@難以解释的;
 infiltration ,/n./@渗透;
 inflammatory ,/adj./@发炎的;
 infringement ,/n./@侵權;
@@ -161,6 +162,7 @@ perspiration ,/n./@流汗;
 perturbation ,/n./@攝動;,/n./@擾亂;,/n./@不安;
 plausibility ,/n./@貌似合理;,/n./@貌似可信;,/n./@可信度;
 possiblility ,/n./@可能性;
+posthumously ,/adv./@死後地;,/adv./@在死後;
 predilection ,/n./@偏好;,/n./@偏爱;,/n./@嗜好;
 prerequisite ,/n./@先決條件;,/adj./@首要必備的;
 presentation ,/n./@展示;,/n./@提供;,/n./@表演;
@@ -183,6 +185,7 @@ registration ,/n./@登记;,/n./@注册;
 relationship ,/n./@关系;
 rememberance ,/n./@回忆;,/n./@记忆力;
 reminiscence ,/n./@懷念;,/n./@回憶;
+repercussion ,/n./@間接後果;,/n./@反響;
 reprehension ,/n./@指責;,/n./@非難;
 reproduction ,/n./@繁殖;
 resurrection ,/n./@復活;,/n./@恢復;,/n./@復興;
