--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -57,6 +57,7 @@ hallucination ,/n./@幻覺;,/n./@妄想;,/n./@錯覺;
 heterogeneous ,/adj./@多相的;,/adj./@異種的;,/adj./@不均勻的;,/adj./@由不同成分形成的;
 inappropriate ,/adj./@不合适的;
 incarceration ,/n./@監禁;
+inconceivable ,/adj./@不可思議的;,/adj./@難以置信的;
 incorporation ,/n./@公司;,/n./@合倂;
 incriminating ,/adj./@显示有罪的;
 indispensable ,/adj./@必不可少的;
@@ -93,6 +94,8 @@ questionnaire ,/n./@问卷;
 regimentation ,/n./@严格控制;,/n./@严密管制;
 reinforcement ,/n./@加强;,/n./@增援;
 replenishment ,/n./@補充;,/n./@再裝滿;,/n./@再備足;
+retrospective ,/adj./@追溯性的;
+reverberation ,/n./@回響;,/n./@餘聲;,/n./@後果;
 righteousness ,/n./@正义;,/n./@公正;
 sadomasochism ,/n./@受虐狂;
 sanctimonious ,/adj./@假裝聖潔的;,/adj./@假裝虔誠的;,/adj./@假裝誠實的;
