--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -5,6 +5,7 @@ characteristic ,/n./@特徵;,/n./@特性;
 circumvolution ,/n./@盤繞;,/n./@旋轉;
 classification ,/n./@分类;
 congratulation ,/n./@祝贺;
+craniocerebral ,/adj./@顱腦的;
 disappointedly ,/adv./@失望的;
 discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
 dysproteinosis ,/n./@蛋白質缺乏症;
