--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -414,7 +414,7 @@ hate ,/v./@恨;,/v./@厭;
 haul ,/v./@拖;,/vt./@运输;,/n./@大量;,/n./@大批;,/n./@旅程;
 have ,/v./@有;
 hawk ,/n./@鷹;,/v./@兜售;,/v./@清嗓;
-haze ,/n./@霧霾;
+haze ,/n./@霧霾;,/n./@霾;
 head ,/n./@頭;
 heal ,/v./@治愈;
 hear ,/v./@聽;
@@ -457,7 +457,7 @@ howl ,/v./@嚎叫;,/v./@嚎哭;,/n./@嚎叫;,/n./@嚎哭;
 huge ,/adj./@大的;
 hull ,/n./@船体;,/n./@殼;,/n./@荚;,/n./@皮;,/n./@蒂;,/n./@花萼;,/n./@船身;,/n./@殼體;
 hunt ,/v./@捕獵;
-hurl ,/v./@猛投;,/v./@猛擲;,/v./@丟下;
+hurl ,/v./@猛投;,/v./@猛擲;,/vt./@投擲;,/vt./@拋出;
 hurt ,/v./@傷害;
 hush ,/vt./@使沉默;,/vt./@使安靜;,/n./@靜寂;,/n./@沉默;
 hype ,/v./@大肆宣傳;,/n./@不实宣传;,/n./@宣传骗局;,/vt./@夸张地宣传;
@@ -591,6 +591,7 @@ mass ,/adj./@大量的;
 mast ,/n./@桅杆;,/n./@柱;
 mate ,/n./@夥伴;,/n./@夥計;
 math ,/n./@數學;
+maul ,/n./@大木槌;,/n./@大木錘;,/vt./@撕咬;
 maze ,/n./@迷宮;
 meal ,/n./@餐;
 mean ,/v./@意思;,/n./@方法;,/adj./@吝啬的;
@@ -679,6 +680,7 @@ obey ,/v./@遵守;
 Ohio ,/n./@俄亥俄州;
 okay ,/adj./@好的;,/adj./@是;
 okra ,/n./@秋葵;
+omen ,/n./@預兆;,/n./@徵兆;,/n./@兆頭;,/n./@前兆;
 omit ,/v./@疏漏;
 once ,/adv./@一次;,/adv./@曾經;,/conj./@一旦;
 only ,/adj./@唯一的;,/adv./@僅僅;,/adv./@祉有;
@@ -781,6 +783,7 @@ rage ,/v./@发怒;,/n./@激烈;,/n./@盛怒;
 raid ,/n.//v./@劫掠;,/v./@袭击;
 rail ,/n./@鐵軌;,/n./@栏杆;,/n./@横杆;,/n./@扶手;
 rain ,/v./@下雨;,/n./@雨;
+rake ,/n./@耙;,/vt./@耙;,/vt./@耙平;
 ramp ,/n./@坡道;,/n./@升降台;,/n./@跳板;,/n./@匝道;
 rank ,/n./@等級;,/n./@隊列;
 rape ,/v./@強奸;
