--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -449,10 +449,11 @@ flame ,/n./@火焰;
 flank ,/n./@側面;
 flare ,/v./@閃耀;,/v./@閃光;,/v./@燃燒;,/n./@照明彈;,/n./@耀斑;
 flash ,/n.//v./@閃光;,/v./@反射;
+flask ,/n./@燒瓶;,/n./@酒瓶;
 fleet ,/n./@艦隊;,/n./@船隊;
 flesh ,/n./@鮮肉;
 flick ,/v./@輕彈;
-fling ,/v./@扔;,/v./@抛;
+fling ,/v./@扔;,/v./@抛;,/vt./@擲;,/vt./@猛推;,/vi./@猛衝;
 flint ,/n./@燧石;,/n./@打火石;
 flirt ,/v./@调情;,/v./@挑逗;,/v./@戏弄;
 float ,/v./@漂浮;
@@ -593,6 +594,7 @@ humor ,/redirected./@target="humour";
 hunch ,/n./@預感;,/n./@直覺;,/vi./@弓身;,/vt./@隆起;
 hunky ,/adj./@结实性感的;
 hurry ,/n./@匆忙;,/v./@趕緊;
+hyoid ,/n./@舌骨;,/adj./@舌骨的;
 ideal ,/adj./@理想的;
 idiom ,/n./@成語;,/n./@習語;
 idiot ,/n./@笨蛋;,/n./@白痴;,/n./@傻子;
@@ -987,6 +989,7 @@ shale ,/n./@頁岩;,/n./@泥板岩;
 shall ,/aux./@應該;
 shame ,/n./@羞恥;
 shape ,/n./@形狀;
+shard ,/n./@碎片;
 share ,/v./@分享;,/n./@份額;
 shark ,/n./@鲨魚;
 sharp ,/adj./@鋒利的;
@@ -1127,7 +1130,7 @@ stoop ,/v./@彎腰;
 store ,/n./@商店;,/v./@貯藏;,/v./@儲備;
 storm ,/n./@風暴;
 story ,/n./@故事;
-stove ,/n./@爐子;
+stove ,/n./@爐子;,/n./@火爐;
 strap ,/v./@捆紥;,/n./@皮帶;
 strip ,/v./@剝奪;,/vt./@脱掉;,/vt./@脱光;,/n./@条;,/n./@狭长地带;,/n./@队服;,/n./@脱衣舞;,/vt./@除去;
 strop ,/v./@磨;
