--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -36,6 +36,7 @@ afield ,/adj./@在遠處;
 afraid ,/v./@恐怕;,/v./@害怕;
 agency ,/n./@代理;
 agenda ,/n./@議事日程;
+agonal ,/adj./@極度痛苦的;,/adj./@臨死的;,/adj./@瀕死的;
 albeit ,/conj./@雖然;,/conj./@卽使;
 albion ,/n./@英格蘭@或不列顛的美稱;
 alcove ,/n./@凹处;
@@ -194,6 +195,7 @@ bruise ,/n./@擦傷;,/n./@瘀傷;,/n./@青腫;,/n./@挫傷;
 brutal ,/adj./@殘忍的;,/adj./@野蠻的;
 bubble ,/n./@氣泡;,/n./@泡泡;
 bucket ,/n./@桶;
+buckle ,/n./@帶釦;,/n./@搭釦;,/vt./@扣上;,/vt./@扣住;
 budget ,/n./@預算;
 budgie ,/n./@虎皮鸚鵡;,/n./@相思鸚鵡;
 buffer ,/n./@緩衝區;
@@ -361,7 +363,7 @@ deceit ,/n./@欺騙;,/n./@欺詐;,/n./@謊言;
 decent ,/adj./@正派的;
 decide ,/v./@決定;,/v./@判決;
 decode ,/v./@破譯;
-decree ,/n./@法令;
+decree ,/n./@法令;,/n./@政令;,/n./@判決;,/n./@裁定;,/n./@命令;,/vt./@命令;,/vt./@判決;,/vt./@裁定;,/vt./@頒布;
 deduce ,/v./@演繹;,/v./@推斷;,/v./@推論;
 deduct ,/v./@減去;
 deepen ,/v./@加深;,/v./@深化;
@@ -435,7 +437,7 @@ drawer ,/n./@抽匣;
 dreary ,/adj./@沉悶的;,/adj./@沉鬱的;,/adj./@凄涼的;,/adj./@枯燥的;,/adj./@乏味的;
 driver ,/n./@司機;
 duffel ,/n./@起绒粗呢;
-duress ,/v./@強迫;,/v./@監禁;
+duress ,/n./@強迫;,/n./@監禁;,/n./@脅迫;
 during ,/v./@在@(...)期間;
 duster ,/n./@抹布;,/n./@防塵外衣;
 dynamo ,/n./@发电机;
@@ -622,6 +624,7 @@ greedy ,/adj./@貪婪的;
 grieve ,/v./@悲痛;
 grisly ,/adj./@可怕的;
 grocer ,/n./@雜貨店;
+grotto ,/n./@洞穴;,/n./@洞室;
 ground ,/n./@場地;,/n./@地面;,/n./@理由;,/n./@根據;
 growth ,/n./@增長;,/n./@發展;,/n./@生長;
 grumpy ,/adj./@脾氣暴躁的;
@@ -911,6 +914,7 @@ obtain ,/v./@獲得;,/v./@習得;
 obtuse ,/adj./@遲鈍的;,/adj./@圓頭的;,/adj./@不鋒利的;
 occupy ,/v./@佔用;,/v./@佔據;,/v./@佔領;,/v./@擔任;
 ocular ,/adj./@眼睛的;,/adj./@視覺的;
+oddity ,/n./@古怪;,/n./@奇特;,/n./@怪事;,/n./@怪人;
 odious ,/adj./@可憎的;
 offend ,/vt./@冒犯;
 office ,/n./@辦公室;
@@ -1074,7 +1078,7 @@ recent ,/adj./@最近的;
 recess ,/n./@休庭;,/n./@壁龛;,/n./@凹处;,/n./@暂停;,/n./@洞;
 recipe ,/n./@食譜;,/n./@配方;,/n./@秘訣;
 recite ,/v./@背誦;,/v./@朗誦;,/v./@講述;
-recoil ,/v./@畏縮;,/v./@反沖;,/v./@後座;
+recoil ,/v./@畏縮;,/v./@反沖;,/v./@後坐;,/vi./@反彈;
 record ,/n.//v./@記錄;,/v./@録制;
 redeem ,/vt./@兌換;,/v./@贖回;,/v./@挽回;,/v./@履行;,/v./@補償;,/v./@恢復;
 reduce ,/v./@減少;
@@ -1176,7 +1180,7 @@ scorch ,/v./@燒焦;
 scrape ,/v./@刮擦;,/vt./@擦傷;,/vt./@刮破;
 scrawl ,/v./@塗鴉;,/v./@亂塗;,/v./@亂寫;
 scream ,/v./@尖叫;
-screen ,/n./@屏幕;,/n./@屏;,/v./@篩選;,/v./@甄別;
+screen ,/n./@屏幕;,/n./@屏;,/v./@篩選;,/v./@甄別;,/n./@掩蔽物;,/n./@紗窗;
 scribe ,/n./@抄寫員;,/v./@寫下;,/v./@記下;,/v./@劃下;
 script ,/n./@腳本;,/n./@手迹;
 scroll ,/n./@捲軸;
@@ -1201,7 +1205,7 @@ senate ,/n./@參議院;
 senior ,/adj./@髙級的;
 sentry ,/n./@哨兵;,/n./@崗哨;
 sequel ,/n./@結局;,/n./@續篇;
-serene ,/adj./@平靜的;,/adj./@清澈的;
+serene ,/adj./@平靜的;,/adj./@安詳的;,/adj./@清澈的;,/adj./@晴朗的;
 series ,/n./@係列;
 sermon ,/n./@布道;,/n./@说教;
 serval ,/n./@藪貓;
@@ -1246,6 +1250,7 @@ sleigh ,/n./@雪橇;
 sleuth ,/n./@大獵犬;,/n./@大警犬;,/n./@偵探;
 slight ,/adj./@稍微的;
 slogan ,/n./@標語;
+sloppy ,/adj./@草率的;,/adj./@马虎的;,/adj./@稀薄的;,/adj./@邋遢的;
 slouch ,/vi./@低头垂肩地坐着;,/vi./@无精打采地站着;
 sludge ,/n./@淤泥;,/n./@烂泥;,/n./@油泥;
 sluice ,/n./@水闸;,/n./@水道;,/n./@冲洗;,/vt./@冲洗;,/vi./@泄出;
@@ -1347,6 +1352,7 @@ sunder ,/v./@切開;,/v./@切斷;,/v./@分離;
 superb ,/adj./@極好的;
 supply ,/v./@供應;,/v./@供給;
 survey ,/v./@調查;
+suture ,/n./@縫合;,/n./@縫合處;
 swanky ,/adj./@炫耀的;
 swathe ,/n./@帶子;,/v./@綁;
 switch ,/v./@轉變;
