--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -315,6 +315,7 @@ coupler ,/n./@耦合器;,/n./@连接器;,/n./@车钩;,/n./@联键音栓;
 courage ,/n./@勇氣;
 courier ,/n./@快遞員;,/n./@情報員;,/n./@通訊員;
 cramped ,/adj./@狹窄的;
+cranium ,/n./@顱;,/n./@頭蓋骨;
 crapper ,/n./@厠所;
 crevice ,/n./@裂縫;,/n./@裂隙;
 crimson ,/n./@深紅色;,/adj./@深紅色的;
@@ -500,7 +501,7 @@ extreme ,/adj./@極度的;,/n./@極端;
 faction ,/n./@派別;,/n./@小集團;,/n./@内訌;
 factory ,/n./@工廠;
 factual ,/adj./@事實的;,/adj./@事实性的;,/adj./@如實的;,/adj./@真實的;
-faculty ,/n./@官能;,/n./@本領;,/n./@學係;
+faculty ,/n./@官能;,/n./@本領;,/n./@學係;,/n./@院系;
 failure ,/n./@失敗;
 fantasy ,/n./@幻想;
 faraway ,/adj./@很遠的;
@@ -513,6 +514,7 @@ feature ,/n./@特徴;,/n./@相貌;,/n./@特寫;
 feeling ,/n./@感觉;,/n./@知觉;,/n./@感情;
 feigned ,/adj./@假的;
 femoral ,/adj./@股骨的;,/adj./@大腿的;
+fencing ,/n./@劍術;,/n./@擊劍;,/n./@柵欄;,/n./@籬笆;
 fertile ,/adj./@肥沃的;,/adj./@富饒的;
 fervent ,/adj./@强烈的;,/adj./@热烈的;
 fervour ,/n./@热忱;
@@ -611,6 +613,7 @@ hearken ,/v./@傾聽;
 heather ,/adj./@雜色的;,/n./@石南;
 heating ,/n./@供暖;
 heavily ,/adv./@重地;
+hectare ,/n./@公頃;
 heiress ,/n./@女繼承人;
 helpful ,/adj./@有益的;,/adj./@有幫助的;,/adj./@有用的;
 hexagon ,/n./@六邊形;,/n./@六角形;
@@ -774,12 +777,14 @@ modesty ,/n./@謙虛;
 modulus ,/n./@係數;,/n./@模數;
 mollify ,/v./@平息;,/v./@撫慰;,/v./@緩和;
 momento ,/n./@紀念品;
+moniker ,/n./@名字;,/n./@綽號;
 monitor ,/n./@班長;,/n./@監視器;,/v./@監視;
 monster ,/n./@怪物;
 montage ,/n./@蒙太奇;
 monthly ,/n./@月刊;
 morning ,/n./@早上;
 mulatto ,/n./@黑白混血兒;
+mummify ,/vt./@木乃伊化;
 mundane ,/adj./@平凡的;,/adj./@世俗的;,/adj./@乏味的;
 musical ,/adj./@音樂的;,/n./@歌舞片;
 mustard ,/n./@芥末;
@@ -806,6 +811,7 @@ noxious ,/adj./@有害的;,/adj./@有毒的;
 nuclear ,/adj./@原子核的;,/adj./@核心的;
 numeric ,/adj./@數値的;,/adj./@數字的;,/n./@數;
 nymphet ,/adj./@仙女般的;,/n./@少婦;
+obelisk ,/n./@方尖碑;,/n./@方尖塔;,/n./@短箭號;
 oblique ,/adj./@傾斜的;,/n./@傾斜物;
 obscene ,/adj./@淫穢的;,/adj./@猥褻的;
 obscure ,/adj./@模糊的;,/adj./@晦暗的;
@@ -907,6 +913,7 @@ placard ,/n./@標語牌;,/n./@海報;,/v./@張貼;,/n./@招貼;
 placate ,/v./@撫慰;,/v./@懷柔;,/v./@和解;
 placebo ,/n./@安慰剂;,/n./@晚祷词;
 plateau ,/n./@髙原;,/n./@髙地;
+platoon ,/n./@排;,/n./@群;,/n./@組;
 pleural ,/adj./@肋膜的;,/adj./@胸膜的;
 plumber ,/n./@管道工;
 plummet ,/vi./@坠落;,/vi./@跌落;
@@ -921,6 +928,7 @@ pompous ,/adj./@自大的;,/adj./@浮誇的;,/adj./@華而不實的;
 pontoon ,/n./@浮舟;,/n./@浮筒;,/n./@浮桥;,/n./@浮船塢;
 popcorn ,/n./@爆米花;
 popular ,/adj./@流行的;,/adj./@受歡迎的;
+portent ,/n./@前兆;,/n./@徵兆;,/n./@預兆;
 portion ,/n./@分配;
 portray ,/vt./@畫;,/vt./@描繪;,/vt./@描寫;,/vt./@扮演;,/vt./@描述;,/vt./@塑造;
 possess ,/v./@擁有;,/v./@佔有;
@@ -965,6 +973,7 @@ profane ,/adj./@褻瀆的;,/vt./@褻瀆;,/adj./@世俗的;
 profess ,/v./@表白;
 proffer ,/n./@提供;,/v./@提供;
 profile ,/n./@簡介;,/n./@側面;,/n./@輪廓;
+profuse ,/adj./@大量的;,/adj./@極其豐富的;,/adj./@充沛的;,/adj./@過多的;
 program ,/n./@程序;,/n./@项目;,/n./@规划;
 project ,/n./@項目;
 prolong ,/vt./@延长;
@@ -980,6 +989,7 @@ proverb ,/n./@諺語;,/n./@格言;
 provide ,/v./@提供;
 provoke ,/v./@激怒;,/v./@驅使;,/v./@煽動;
 prudent ,/adj./@謹慎的;
+psychic ,/adj./@心靈的;,/adj./@精神的;,/adj./@超自然的;,/adj./@通靈的;
 pungent ,/adj./@辛辣的;,/adj./@刺激性的;,/adj./@苦痛的;,/adj./@尖刻的;
 purloin ,/v./@偷竊;
 purport ,/v./@聲稱;,/v./@意圖;,/n./@意圖;,/n./@意義;
@@ -1201,7 +1211,7 @@ surgeon ,/n./@外科醫生;
 surmise ,/vt./@推測;,/vt./@猜測;,/vt./@臆測;
 surname ,/n./@名字;
 surpass ,/v./@超過;,/v./@優于;,/v./@多于;
-surplus ,/v./@剩余;,/v./@盈余;
+surplus ,/n./@剩餘;,/n./@盈餘;,/n./@過剩;,/adj./@剩餘的;,/adj./@過剩的;
 survive ,/v./@存活;,/v./@幸存;
 suspect ,/v./@懷疑;
 suspend ,/v./@懸浮;,/v./@停學;
@@ -1320,7 +1330,7 @@ vertigo ,/n./@眩暈;
 vestige ,/n./@遺迹;,/n./@残迹;,/n./@丝毫;,/n./@残余;
 veteran ,/n./@老兵;
 vibrant ,/adj./@振動的;,/adj./@充滿生氣的;
-vibrate ,/v./@振動;
+vibrate ,/v./@振動;,/vi./@顫動;
 vicious ,/adj./@惡性的;
 victory ,/n./@勝利;
 village ,/n./@村莊;
