--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -110,6 +110,7 @@ aversion ,/n./@非常討厭;
 aviation ,/n./@航空;
 bachelor ,/n./@單身漢;,/n./@學士;
 backbone ,/n./@脊骨;
+backdrop ,/n./@背景幕;,/n./@背景;
 backward ,/adj./@向后的;
 bacteria ,/n./@細菌;
 badmouth ,/vt./@詆毀;,/vt./@批評;
@@ -174,6 +175,7 @@ celerity ,/n./@速度;
 cellular ,/adj./@细胞的;,/adj./@多孔的;
 cemetary ,/n./@墓地;
 cemetery ,/n./@墓地;
+cerebrum ,/n./@大腦;
 ceremony ,/n./@仪式;,/n./@典礼;,/n./@礼节;
 chairman ,/n./@主席;
 champion ,/n./@冠军;
@@ -347,7 +349,7 @@ dividend ,/n./@分红;
 division ,/n./@分开;
 doctrine ,/n./@教义;,/n./@学说;,/n./@信条;
 document ,/n./@文件;
-domestic ,/adj./@本国的;
+domestic ,/adj./@本国的;,/adj./@國內的;,/adj./@家庭的;,/adj./@馴養的;
 dominant ,/adj./@显性的;
 dominate ,/v./@控制;,/v./@支配;,/v./@统治;
 dominion ,/n./@主权;
@@ -773,6 +775,7 @@ overdose ,/v./@服藥過量;,/v./@沉溺;,/n./@服藥過量;
 overflow ,/v./@溢出;,/n./@溢出;
 overhaul ,/n./@大修;
 overhear ,/vt./@无意中听到;
+overkill ,/n./@過度殺傷;,/n./@過分誇張;,/n./@超量毁伤;
 overload ,/n.//v./@超载;
 overlook ,/v./@忽视;
 overpass ,/vt./@天桥;
