--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -135,7 +135,7 @@ cafeteria ,/n./@自助餐廳;
 calculate ,/v./@计算;
 calibrate ,/v./@矯正;
 caliphate ,/n./@伊斯蘭王權;,/n./@阿拉伯帝國;
-candidacy ,/n./@候選資格;,/n./@候選狀態;
+candidacy ,/n./@候選資格;,/n./@候選狀態;,/n./@候補資格;
 canonical ,/adj./@權威的;,/adj./@規範的;,/adj./@標準的;,/adj./@典型的;
 capillary ,/n./@毛细管;
 captivate ,/v./@迷住;
@@ -225,6 +225,7 @@ criterion ,/n./@标准;
 criticize ,/v./@批评;
 crocodile ,/n./@鳄鱼;
 crossfire ,/n./@交叉火力;,/n./@激烈交锋;
+crossover ,/n./@交叉;,/n./@交叉點;,/n./@穿越;
 crossword ,/n./@纵横字谜;
 cruciform ,/adj./@十字形的;
 culminate ,/vi./@告终;,/vi./@達到高潮;,/vi./@達到頂點;
@@ -303,7 +304,7 @@ dispersal ,/n./@分散;,/n./@传播;,/n./@散布;,/n./@疏散;,/n./@消失;
 disregard ,/v./@忽视;,/v./@不尊重;
 dissenter ,/n./@反对者;,/n./@异议者;
 dissident ,/n./@持不同政见者;
-dissipate ,/v./@耗费;,/v./@驱散;,/v./@浪费;,/v./@消耗;
+dissipate ,/v./@耗费;,/v./@驱散;,/v./@浪费;,/v./@消耗;,/vt./@消除;
 distingue ,/adj./@高尚的;
 divergent ,/adj./@有分歧的;,/adj./@不同的;
 diversion ,/n./@转移;,/n./@消遣;
@@ -350,6 +351,7 @@ entourage ,/n./@随从;
 enumerate ,/v./@列舉;,/v./@枚舉;
 enunciate ,/v./@明確表達;
 ephemeral ,/adj./@短暫的;,/adj./@朝生暮死的;
+epidermis ,/n./@表皮;,/n./@外皮;
 equipment ,/n./@裝備;,/n./@設備;,/n./@器材;,/n./@裝置;
 eradicate ,/v./@根除;
 erroneous ,/adj./@错误的;
@@ -872,7 +874,7 @@ subscript ,/adj./@下標的;,/n./@下標;
 subsidize ,/vt./@补贴;,/vt./@资助;
 substance ,/n./@物质;
 succulent ,/adj./@多汁的;
-suffocate ,/v./@窒息;,/v./@受阻;
+suffocate ,/v./@窒息;,/v./@受阻;,/vt./@悶死;,/vt./@扼制;
 sumptuous ,/adj./@奢侈的;,/adj./@豪華的;,/adj./@奢華的;
 sunflower ,/n./@向日葵;
 supersede ,/v./@取代;,/v./@推遲;,/v./@代替;
@@ -890,7 +892,7 @@ technique ,/n./@技术;
 telephone ,/n./@电话;
 telescope ,/n./@望远镜;
 temporary ,/adj./@临时的;
-tentative ,/adj./@試探性的;
+tentative ,/adj./@試探性的;,/adj./@試驗性的;,/adj./@暫時性的;,/adj./@嘗試性的;
 terminate ,/vt./@终止;,/vt./@结束;,/vt./@停止;,/vt./@解雇;
 territory ,/n./@领地;
 tesseract ,/n./@四次元立方體;,/n./@超立方體;,/n./@四維立方體;
@@ -915,6 +917,7 @@ transport ,/v./@运输;
 treadmill ,/n./@踏車;,/n./@跑步機;,/n./@單調的工作;
 treatment ,/n./@治療;,/n./@待遇;
 trembling ,/adj./@发抖的;
+tributary ,/adj./@支流的;,/adj./@納貢的;,/n./@支流;,/n./@附庸國;
 turbulent ,/adj./@动荡的;
 umbilical ,/adj./@脐带的;
 unanimous ,/adj./@一致的;,/adj./@意见一致的;,/adj./@一致通過的;
