--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -65,6 +65,7 @@ articulate
 aspiration
 assessment
 assignment
+assortment
 assumption
 astounding
 astriction
@@ -107,12 +108,14 @@ celebrated
 censorship
 centigrade
 centimeter
+centrifuge
 cephalopod
 ceremonial
 chalkboard
 charioteer
 chivalrous
 chromosome
+chronology
 circumcise
 circumvent
 clumsiness
@@ -125,6 +128,7 @@ collegiate
 commandeer
 commentary
 commercial
+comminuted
 commission
 commonweal
 comparable
@@ -336,6 +340,7 @@ illuminati
 illustrate
 immaculate
 immaterial
+impassable
 impeccable
 impediment
 imperative
@@ -474,6 +479,7 @@ percentile
 perception
 perfection
 periodical
+permafrost
 permanence
 permission
 perpetrate
@@ -523,6 +529,7 @@ radiosonde
 reasonable
 receptacle
 recreation
+recuperate
 recurrence
 referendum
 reflection
@@ -612,6 +619,7 @@ suspicious
 synonymous
 systematic
 technology
+telepathic
 television
 temptation
 thoughtful
@@ -632,6 +640,7 @@ tremendous
 triviality
 tumultuous
 turbulence
+ubiquitous
 ultimately
 ultrasound
 unbearable
@@ -652,6 +661,7 @@ unwinnable
 unyielding
 upbringing
 validation
+vehemently
 ventilator
 verifiable
 vindictive
