--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -20,6 +20,7 @@ appendicitis
 appreciation
 apprehension
 architecture
+asphyxiation
 assassinator
 asynchronous
 auscultation
@@ -161,6 +162,7 @@ perspiration
 perturbation
 plausibility
 possiblility
+posthumously
 predilection
 prerequisite
 presentation
@@ -183,6 +185,7 @@ registration
 relationship
 rememberance
 reminiscence
+repercussion
 reprehension
 reproduction
 resurrection
