--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -57,6 +57,7 @@ hallucination
 heterogeneous
 inappropriate
 incarceration
+inconceivable
 incorporation
 incriminating
 indispensable
@@ -93,6 +94,8 @@ questionnaire
 regimentation
 reinforcement
 replenishment
+retrospective
+reverberation
 righteousness
 sadomasochism
 sanctimonious
