--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -591,6 +591,7 @@ mass
 mast
 mate
 math
+maul
 maze
 meal
 mean
@@ -679,6 +680,7 @@ obey
 Ohio
 okay
 okra
+omen
 omit
 once
 only
@@ -781,6 +783,7 @@ rage
 raid
 rail
 rain
+rake
 ramp
 rank
 rape
