--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -449,6 +449,7 @@ flame
 flank
 flare
 flash
+flask
 fleet
 flesh
 flick
@@ -593,6 +594,7 @@ humor
 hunch
 hunky
 hurry
+hyoid
 ideal
 idiom
 idiot
@@ -987,6 +989,7 @@ shale
 shall
 shame
 shape
+shard
 share
 shark
 sharp
