--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -36,6 +36,7 @@ afield
 afraid
 agency
 agenda
+agonal
 albeit
 albion
 alcove
@@ -194,6 +195,7 @@ bruise
 brutal
 bubble
 bucket
+buckle
 budget
 budgie
 buffer
@@ -622,6 +624,7 @@ greedy
 grieve
 grisly
 grocer
+grotto
 ground
 growth
 grumpy
@@ -911,6 +914,7 @@ obtain
 obtuse
 occupy
 ocular
+oddity
 odious
 offend
 office
@@ -1246,6 +1250,7 @@ sleigh
 sleuth
 slight
 slogan
+sloppy
 slouch
 sludge
 sluice
@@ -1347,6 +1352,7 @@ sunder
 superb
 supply
 survey
+suture
 swanky
 swathe
 switch
