--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -315,6 +315,7 @@ coupler
 courage
 courier
 cramped
+cranium
 crapper
 crevice
 crimson
@@ -513,6 +514,7 @@ feature
 feeling
 feigned
 femoral
+fencing
 fertile
 fervent
 fervour
@@ -611,6 +613,7 @@ hearken
 heather
 heating
 heavily
+hectare
 heiress
 helpful
 hexagon
@@ -774,12 +777,14 @@ modesty
 modulus
 mollify
 momento
+moniker
 monitor
 monster
 montage
 monthly
 morning
 mulatto
+mummify
 mundane
 musical
 mustard
@@ -806,6 +811,7 @@ noxious
 nuclear
 numeric
 nymphet
+obelisk
 oblique
 obscene
 obscure
@@ -907,6 +913,7 @@ placard
 placate
 placebo
 plateau
+platoon
 pleural
 plumber
 plummet
@@ -921,6 +928,7 @@ pompous
 pontoon
 popcorn
 popular
+portent
 portion
 portray
 possess
@@ -965,6 +973,7 @@ profane
 profess
 proffer
 profile
+profuse
 program
 project
 prolong
@@ -980,6 +989,7 @@ proverb
 provide
 provoke
 prudent
+psychic
 pungent
 purloin
 purport
