--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -110,6 +110,7 @@ aversion
 aviation
 bachelor
 backbone
+backdrop
 backward
 bacteria
 badmouth
@@ -174,6 +175,7 @@ celerity
 cellular
 cemetary
 cemetery
+cerebrum
 ceremony
 chairman
 champion
@@ -773,6 +775,7 @@ overdose
 overflow
 overhaul
 overhear
+overkill
 overload
 overlook
 overpass
