--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -225,6 +225,7 @@ criterion
 criticize
 crocodile
 crossfire
+crossover
 crossword
 cruciform
 culminate
@@ -350,6 +351,7 @@ entourage
 enumerate
 enunciate
 ephemeral
+epidermis
 equipment
 eradicate
 erroneous
@@ -915,6 +917,7 @@ transport
 treadmill
 treatment
 trembling
+tributary
 turbulent
 umbilical
 unanimous
