--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -13,6 +13,7 @@ altercation
 alternative
 amphetamine
 anachronism
+anaesthetic
 analyzation
 anticipated
 apocalyptic
@@ -292,6 +293,7 @@ precipitate
 predictable
 predominant
 prehistoric
+preliminary
 premonition
 preparation
 preposition
@@ -332,6 +334,7 @@ responsible
 restoration
 restriction
 retribution
+retroactive
 rudimentary
 salvolatile
 scholarship
